--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -4,7 +4,7 @@ F_CPU = 16000000L
 //CXXFLAGS+=-DI2CDEV_SERIAL_DEBUG 
 //CXXFLAGS+=-DI2CDEV_SERIAL_DEBUG -DMPU6050 -DMPU_DEBUG 
 
-CXXFLAGS+=-DMPU9150 -DDEBUG
+CXXFLAGS+=-DMPU9150 -DDEBUG1
 
 include ../Arduino-Makefile/Arduino.mk
 
