--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -5,6 +5,7 @@ F_CPU = 16000000L
 //CXXFLAGS+=-DI2CDEV_SERIAL_DEBUG -DMPU6050 -DMPU_DEBUG 
 
 CXXFLAGS+=-DMPU9150 -DALTHOLD -DDEBUG1 -DMPU_DEBUG1
+//CXXFLAGS+=-DMPU9150 -DALTHOLD1 -DDEBUG -DMPU_DEBUG1
 
 include /opt/Arduino-Makefile/Arduino.mk
 
