Initial socket implementation

--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -1,40 +1,31 @@
 CXX=g++
 CXXFLAGS= -Wall -g -O2 -DDEBUG
-CXX_OPTS= -Wall -g -O2 -DDEBUG
-LDFLAGS=-lpthread -pthread
-LD_OPTS=-lpthread -lrt
 
-PROG=avrcontroller
+CC=cc
+CFLAGS=
+LDFLAGS=-lstdc++ -lm 
+#LDFLAGS=-lpthread -pthread -lstdc++ -lsupc++ 
+#LD_OPTS=-lpthread -lrt -lstdc++
 
 INSTALL=install
 
+OBJ_AVRCONTROLLER=avrcontroller.o mpu.o flightlog.o bmpsensor/libbs.a libs/libi2cdev.a routines.o config.o ps3controller.o
+OBJ_AVRSPI=avrspi.o routines.o gpio.o spidev.o
+OBJ_AVRSPI_CMD=avrspi_cmd.o routines.o
+
 %.o: %.c                                                                         
-	$(CXX) -c $(CXXFLAGS) $(CXX_OPTS) $< -o $@ 
+	$(CXX) -c $(CXXFLAGS) $< -o $@ 
 
+all: avrcontroller avrspi avrspi_cmd
 
-all: controller.o avrspi.o 
-	$(CXX) $(CXXFLAGS) $(CXX_OPTS) $(LD_OPTS) -o $(PROG) \
-		main.c \
-		config.o \
-		ps3controller.o \
-		gpio.o \
-		routines.o \
-		mpu.o \
-		flightlog.o \
-		bmpsensor/libbs.a \
-		libs/libi2cdev.a \
-		spidev.o
-	$(CXX) $(CXXFLAGS) $(CXX_OPTS) $(LD_OPTS) -o avrspi \
-		avrspi.o
-	
+avrcontroller: $(OBJ_AVRCONTROLLER)
+	$(CC) $(CFLAGS) $(OBJ_AVRCONTROLLER) -o avrcontroller $(LDFLAGS) 
 
-controller.o: mpu.o flightlog.o bmpsensor/libbs.a libs/libi2cdev.a routines.o spidev.o config.o gpio.o ps3controller.o 
+avrspi: $(OBJ_AVRSPI)
+	$(CC) $(CFLAGS) $(OBJ_AVRSPI) -o avrspi $(LDFLAGS) 
 
-speedcontroller/libspeedcontroller.a:
-	$(MAKE) -C speedcontroller/ 
-	
-motionsensor/libmotionsensor.a:
-	$(MAKE) -C motionsensor/ 
+avrspi_cmd: $(OBJ_AVRSPI_CMD)
+	$(CC) $(CFLAGS) $(OBJ_AVRSPI_CMD) -o avrspi_cmd $(LDFLAGS) 
 
 receiver/libreceiver.a:
 	$(MAKE) -C receiver/ 
@@ -47,12 +38,14 @@ libs/libi2cdev.a:
 
 install:
 	$(INSTALL) -m 0755 -d $(DESTDIR)/usr/local/bin
-	$(INSTALL) -m 755 $(PROG) $(DESTDIR)/usr/local/bin/
+	$(INSTALL) -m 755 avrcontroller $(DESTDIR)/usr/local/bin/
 	$(INSTALL) -m 755 avrspi $(DESTDIR)/usr/local/bin/
+	$(INSTALL) -m 755 avrspi_cmd $(DESTDIR)/usr/local/bin/
 
 clean:
 	cd bmpsensor && $(MAKE) clean
 	cd libs/i2cdev && $(MAKE) clean
-	rm -rf $(PROG)
+	rm -rf avrcontroller 
+	rm -rf avrspi_cmd
 	rm -rf avrspi 
 	rm -rf *.o *~ *.mod
