Barometer is now a separate process

--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -11,15 +11,16 @@ LDFLAGS=$(CC_OPTS)
 
 INSTALL=install
 
-OBJ_AVRCONTROLLER=avrcontroller.o mpu.o flightlog.o bmpsensor/libbs.a libs/libi2cdev.a routines.o config.o ps3controller.o
+OBJ_AVRCONTROLLER=avrcontroller.o mpu.o flightlog.o routines.o config.o ps3controller.o
 OBJ_AVRSPI=avrspi.o routines.o gpio.o spidev.o
 OBJ_AVRSPI_CMD=avrspi_cmd.o routines.o
 OBJ_AVRSPI_BUF=avrspi_buf.o routines.o
+OBJ_AVRBARO=avrbaro.o routines.o bmpsensor/libbs.a libs/libi2cdev.a
 
 %.o: %.c                                                                         
 	$(CXX) -c $(CXXFLAGS) $(CXX_OPTS) $< -o $@ 
 
-all: avrcontroller avrspi avrspi_cmd avrspi_buf
+all: avrcontroller avrspi avrspi_cmd avrspi_buf avrbaro
 
 avrcontroller: $(OBJ_AVRCONTROLLER)
 	$(CC) $(CFLAGS) $(OBJ_AVRCONTROLLER) -o avrcontroller $(LDFLAGS) $(CC_OPTS) 
@@ -32,6 +33,9 @@ avrspi_cmd: $(OBJ_AVRSPI_CMD)
 
 avrspi_buf: $(OBJ_AVRSPI_BUF)
 	$(CC) $(CFLAGS) $(OBJ_AVRSPI_BUF) -o avrspi_buf $(LDFLAGS) $(CC_OPTS) 
+
+avrbaro: $(OBJ_AVRBARO)
+	$(CC) $(CFLAGS) $(OBJ_AVRBARO) -o avrbaro $(LDFLAGS) $(CC_OPTS) 
 
 receiver/libreceiver.a:
 	$(MAKE) -C receiver/ 
@@ -48,6 +52,7 @@ install:
 	$(INSTALL) -m 755 avrspi $(DESTDIR)/usr/local/bin/
 	$(INSTALL) -m 755 avrspi_cmd $(DESTDIR)/usr/local/bin/
 	$(INSTALL) -m 755 avrspi_buf $(DESTDIR)/usr/local/bin/
+	$(INSTALL) -m 755 avrbaro $(DESTDIR)/usr/local/bin/
 
 clean:
 	cd bmpsensor && $(MAKE) clean
@@ -56,4 +61,5 @@ clean:
 	rm -rf avrspi_cmd
 	rm -rf avrspi_buf
 	rm -rf avrspi 
+	rm -rf avrbaro 
 	rm -rf *.o *~ *.mod
