Adding dma capable spi driver

--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -22,6 +22,9 @@ OBJ_AVRBARO=avrbaro.o routines.o bmpsensor/libbs.a libs/libi2cdev.a
 
 all: _websockify avrcontroller avrspi avrspi_cmd avrspi_buf avrbaro
 
+modules:
+	$(MAKE) -C spi-bcm2708-dma/
+
 _websockify:
 	$(MAKE) -C websockify/
 
@@ -62,6 +65,7 @@ clean:
 	cd bmpsensor && $(MAKE) clean
 	cd libs/i2cdev && $(MAKE) clean
 	cd websockify && $(MAKE) clean
+	cd spi-bcm2708-dma && $(MAKE) clean
 	rm -rf avrcontroller 
 	rm -rf avrspi_cmd
 	rm -rf avrspi_buf
