Adding camera streamer; Adding UDP support; Adding avrping; Adding avrconfig

--- a/rpi/spi-bcm2708-dma/Makefile
+++ b/rpi/spi-bcm2708-dma/Makefile
@@ -10,10 +10,9 @@ install:
 	$(MAKE) -C $(KERNEL_SRC) M=$(PWD) modules_install
 
 clean:
-	rm -rf *.ko
-	rm -rf *.o
-	rm -rf *.mod.c
-	rm -rdf .tmp_versions
-	rm -rf .spi*
-	rm -rf modules.order
-	rm -rf Module.symvers
+	rm *.ko
+	rm *.o
+	rm *.mod.c
+	rm -rdf .*
+	rm modules.order
+	rm Module.symvers
